docs: document default vs experimental FFM signal backends